# pico-neural-amp-modeler-demo

./: .gitignore  .gitmodules  CMakeLists.txt  GETTING_STARTED.md  LICENSE  README.md  RESULTS.md
.github/workflows/: release.yml
include/: bench_signal.h  dwt.h  fx.h  nam_model.h
include/compat/: mutex
scripts/: build_host_a2.sh
src/: benchmark.cpp  main.c  nam_fx.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: CMakeLists.txt  host_a2.cpp  host_split.cpp
